--- a/src/components/owner-list/style.scss
+++ b/src/components/owner-list/style.scss
@@ -26,7 +26,7 @@
         margin: 0;
         list-style: none;
         li {
-          a {
+          span {
             font-family: $neue-helveticamedium;
             font-size: 1.2rem;
             color: #fff;
@@ -35,10 +35,11 @@
             text-decoration: none;
             padding: 0.2rem 1.5rem;
             border-radius: 50rem;
+            background-color: #e7e7e7;
             &:hover,
             &:focus,
             &:active {
-              background-color: rgba(255, 255, 255, 0.212);
+              background-color: #d3d3d3;
             }
             &.active {
               background-color: #fff;
