--- a/src/components/show-all/style.scss
+++ b/src/components/show-all/style.scss
@@ -66,6 +66,10 @@ button.load_more {
         width: 31.55%;
       }
     }
+    .dropdown-menu {
+      max-height: 320px;
+      overflow-y: auto;
+    }
   }
 }
 .filter-drop-btn {
